--- a/test/pom.xml
+++ b/test/pom.xml
@@ -17,7 +17,7 @@
         <module>test-core</module>
         <module>test-extension</module>
         <module>test-logging</module>
-        <module>test-starter</module>
+        <module>test-configcenter</module>
     </modules>
 
     <dependencies>
