--- a/test/test-configcenter/pom.xml
+++ b/test/test-configcenter/pom.xml
@@ -7,5 +7,5 @@
         <artifactId>dynamic-tp-test</artifactId>
         <version>1.0.9</version>
     </parent>
-    <artifactId>dynamic-tp-test-starter</artifactId>
+    <artifactId>dynamic-tp-test-configcenter</artifactId>
 </project>
