adapter add brpc

--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -19,6 +19,7 @@
         <module>adapter-grpc</module>
         <module>adapter-motan</module>
         <module>adapter-okhttp3</module>
+        <module>adapter-brpc</module>
     </modules>
 
     <dependencies>
