--- a/example/example-adapter/src/main/resources/bootstrap.yml
+++ b/example/example-adapter/src/main/resources/bootstrap.yml
@@ -47,3 +47,8 @@ grpc:
       enableKeepAlive: true
       keepAliveWithoutCalls: true
       negotiationType: plaintext
+
+starlight:
+  server:
+    enable: true
+    port: 8777
