--- a/starter/starter-adapter/pom.xml
+++ b/starter/starter-adapter/pom.xml
@@ -19,5 +19,6 @@
         <module>starter-adapter-grpc</module>
         <module>starter-adapter-motan</module>
         <module>starter-adapter-okhttp3</module>
+        <module>starter-adapter-brpc</module>
     </modules>
 </project>
