--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -13,6 +13,7 @@
         <maven.deploy.skip>true</maven.deploy.skip>
         <motan.version>1.1.13</motan.version>
         <okhttp.version>3.14.9</okhttp.version>
+        <brpc.version>2022.2.0</brpc.version>
     </properties>
 
     <dependencies>
@@ -92,6 +93,12 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-okhttp3</artifactId>
+            <version>${dtp.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-brpc</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
@@ -202,6 +209,17 @@
             <version>${okhttp.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.baidu.cloud</groupId>
+            <artifactId>spring-cloud-starter-baidu-starlight</artifactId>
+            <version>${brpc.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
