--- a/starter/starter-adapter/pom.xml
+++ b/starter/starter-adapter/pom.xml
@@ -20,5 +20,6 @@
         <module>starter-adapter-motan</module>
         <module>starter-adapter-okhttp3</module>
         <module>starter-adapter-brpc</module>
+        <module>starter-adapter-tars</module>
     </modules>
 </project>
