manage all jar version

--- a/adapter/adapter-hystrix/pom.xml
+++ b/adapter/adapter-hystrix/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
             <artifactId>hystrix-core</artifactId>
-            <version>1.5.18</version>
+            <version>${hystrix.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
