--- a/starter/starter-configcenter/starter-zookeeper/pom.xml
+++ b/starter/starter-configcenter/starter-zookeeper/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>5.2.1</version>
+            <version>${zookeeper.version}</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
