--- a/adapter/adapter-dubbo/pom.xml
+++ b/adapter/adapter-dubbo/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.apache.dubbo</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>3.0.7</version>
+            <version>${apache-dubbo.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.alibaba.spring.boot</groupId>
             <artifactId>dubbo-spring-boot-starter</artifactId>
-            <version>2.0.0</version>
+            <version>${alibaba-dubbo.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
