--- a/adapter/adapter-grpc/pom.xml
+++ b/adapter/adapter-grpc/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>net.devh</groupId>
             <artifactId>grpc-server-spring-boot-starter</artifactId>
-            <version>2.13.1.RELEASE</version>
+            <version>${grpc.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
