--- a/adapter/adapter-rocketmq/pom.xml
+++ b/adapter/adapter-rocketmq/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.2.2</version>
+            <version>${rocketmq.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
