--- a/extension/extension-skywalking/pom.xml
+++ b/extension/extension-skywalking/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.apache.skywalking</groupId>
             <artifactId>apm-toolkit-trace</artifactId>
-            <version>8.11.0</version>
+            <version>${skywalking.version}</version>
         </dependency>
     </dependencies>
 
