--- a/starter/starter-configcenter/starter-nacos/pom.xml
+++ b/starter/starter-configcenter/starter-nacos/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-api</artifactId>
-            <version>2.0.4</version>
+            <version>${nacos.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.alibaba.nacos</groupId>
             <artifactId>nacos-client</artifactId>
-            <version>2.0.4</version>
+            <version>${nacos.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
