--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-all</artifactId>
-        <version>1.0.9</version>
+        <version>1.1.0</version>
     </parent>
     <artifactId>dynamic-tp-adapter</artifactId>
     <packaging>pom</packaging>
@@ -21,6 +21,7 @@
         <module>adapter-okhttp3</module>
         <module>adapter-brpc</module>
         <module>adapter-tars</module>
+        <module>adapter-liteflow</module>
     </modules>
 
     <dependencies>
