--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.0.9</version>
+        <version>1.1.0</version>
     </parent>
     <artifactId>dynamic-tp-example-adapter</artifactId>
 
@@ -99,6 +99,12 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-brpc</artifactId>
+            <version>${dtp.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-liteflow</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
@@ -219,6 +225,12 @@
                     <artifactId>logback-classic</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.yomahub</groupId>
+            <artifactId>liteflow-spring-boot-starter</artifactId>
+            <version>2.9.6</version>
         </dependency>
     </dependencies>
 
