添加spring cloud stream rocketMq的适配器

--- a/adapter/adapter-rocketmq/pom.xml
+++ b/adapter/adapter-rocketmq/pom.xml
@@ -16,6 +16,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rocketmq</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-spring-boot-starter</artifactId>
             <version>${rocketmq.version}</version>
