--- a/adapter/pom.xml
+++ b/adapter/pom.xml
@@ -21,6 +21,7 @@
         <module>adapter-okhttp3</module>
         <module>adapter-brpc</module>
         <module>adapter-tars</module>
+        <module>adapter-sofa</module>
     </modules>
 
     <dependencies>
