refactor example-adapter

--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -16,6 +16,9 @@
 
     <modules>
         <module>example-adapter-okhttp3</module>
+        <module>example-adapter-dubbo</module>
+<!--        <module>example-adapter-okhttp3</module>-->
+<!--        <module>example-adapter-okhttp3</module>-->
     </modules>
 
 
