--- a/example/example-adapter/example-adapter-dubbo/pom.xml
+++ b/example/example-adapter/example-adapter-dubbo/pom.xml
@@ -7,11 +7,10 @@
         <groupId>cn.dynamictp</groupId>
         <version>1.1.0</version>
     </parent>
-    <artifactId>dynamic-tp-example-adapter-okhttp3</artifactId>
+    <artifactId>dynamic-tp-example-adapter-doubbo</artifactId>
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
-        <okhttp.version>3.14.9</okhttp.version>
     </properties>
 
     <dependencies>
@@ -27,15 +26,16 @@
 
         <dependency>
             <groupId>cn.dynamictp</groupId>
-            <artifactId>dynamic-tp-spring-boot-starter-adapter-okhttp3</artifactId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-dubbo</artifactId>
             <version>${dtp.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>${okhttp.version}</version>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>3.0.7</version>
         </dependency>
+
 
     </dependencies>
 </project>
