--- a/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
@@ -6,3 +6,16 @@ spring:
     name: dynamic-tp-adapter-okhttp3-demo
   profiles:
     active: dev
+
+  dynamic:
+    tp:
+      enabled: true
+      enabledBanner: true           # 是否开启banner打印，默认true
+      enabledCollect: true          # 是否开启监控指标采集，默认false
+      collectorTypes: logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
+      monitorInterval: 5
+      okhttp3Tp: # okhttp3 线程池配置
+        - threadPoolName: okHttpClientTp
+          corePoolSize: 100
+          maximumPoolSize: 200
+          keepAliveTime: 60
