refactor example-adapter

--- a/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
@@ -19,3 +19,14 @@ spring:
           corePoolSize: 100
           maximumPoolSize: 200
           keepAliveTime: 60
+
+dubbo:
+  application:
+    name: dynamic-tp-adapter-dubbo-demo
+  registry:
+    id: zookeeper-registry
+    protocol: zookeeper
+    address: zookeeper://127.0.0.1:2181
+  protocol:
+    name: dubbo
+    port: 20880
