--- a/example/example-adapter/example-adapter-grpc/pom.xml
+++ b/example/example-adapter/example-adapter-grpc/pom.xml
@@ -35,7 +35,25 @@
             <artifactId>grpc-spring-boot-starter</artifactId>
             <version>2.13.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <extensions>
