--- a/example/example-adapter/example-adapter-grpc/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-grpc/src/main/resources/application.yml
@@ -6,6 +6,18 @@ spring:
     name: dynamic-tp-adapter-grpc-demo
   profiles:
     active: dev
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+      config:
+        server-addr: ${spring.cloud.nacos.discovery.server-addr}
+        file-extension: yml
+        extension-configs:
+          - dataId: ${spring.application.name}-dtp-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
+            group: DEFAULT_GROUP
+            refresh: true  # 必须配置，负责自动刷新不生效
+        refresh-enabled: true
 
   dynamic:
     tp:
@@ -26,7 +38,8 @@ grpc:
     in-process-name: test
 
   client:
-    spring-boot-grpc-server:
+    cloud-grpc-server:
+      address: 'discovery:///dynamic-tp-adapter-grpc-demo'
       enableKeepAlive: true
       keepAliveWithoutCalls: true
       negotiationType: plaintext
