--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -18,7 +18,7 @@
         <module>example-adapter-okhttp3</module>
         <module>example-adapter-dubbo</module>
         <module>example-adapter-grpc</module>
-<!--        <module>example-adapter-okhttp3</module>-->
+        <module>example-adapter-brpc</module>
     </modules>
 
 
