--- a/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-okhttp3/src/main/resources/application.yml
@@ -12,21 +12,43 @@ spring:
       enabled: true
       enabledBanner: true           # 是否开启banner打印，默认true
       enabledCollect: true          # 是否开启监控指标采集，默认false
-      collectorTypes: logging     # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
+      collectorTypes: logging       # 监控数据采集器类型（logging | micrometer | internal_logging），默认micrometer
       monitorInterval: 5
-      okhttp3Tp: # okhttp3 线程池配置
+      platforms:                    # 通知报警平台配置
+        - platform: wechat
+          urlKey: 3a7500-1287-4bd-a798-c5c3d8b69c  # 替换
+          receivers: test1,test2                   # 接受人企微名称
+        - platform: ding
+          urlKey: f80dad441fcd655438f4a08dcd6a     # 替换
+          secret: SECb5441fa6f375d5b9d21           # 替换，非sign模式可以没有此值
+          receivers: 15810119805                   # 钉钉账号手机号
+        - platform: lark
+          urlKey: 0d944ae7-b24a-40                 # 替换
+          receivers: test1,test2                   # 接受人飞书名称/openid
+        - platform: email
+          receivers: 123456@qq.com,789789@qq.com   # 收件人
+      okhttp3Tp:                                   # okhttp3 线程池配置
         - threadPoolName: okHttpClientTp
           corePoolSize: 100
           maximumPoolSize: 200
           keepAliveTime: 60
 
-dubbo:
-  application:
-    name: dynamic-tp-adapter-dubbo-demo
-  registry:
-    id: zookeeper-registry
-    protocol: zookeeper
-    address: zookeeper://127.0.0.1:2181
-  protocol:
-    name: dubbo
-    port: 20880
+  # email notify configuration
+  mail:
+    # (optional) email subject, default:ThreadPool Notify
+    title: ThreadPool Notify
+    # mail service address
+    host: smtp.qq.com
+    port: 465
+    # send from
+    username: 123456@qq.com
+    # authorization code eg: rlpadadtcugh4152e
+    password: xxxxxxxxxxxxxxxx
+    default-encoding: UTF-8
+    properties:
+      mail:
+        smtp:
+          socketFactoryClass: javax.net.ssl.SSLSocketFactory
+          ssl:
+            enable: true
+        debug: false
