--- a/example/example-adapter/example-adapter-brpc/src/main/resources/application.yml
+++ b/example/example-adapter/example-adapter-brpc/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
         - platform: email
           receivers: 123456@qq.com,789789@qq.com   # 收件人
       brpcTp:                                      # brpc 线程池配置
-        - threadPoolName: biz1#server              # 名称规则：biz_thread_pool_name + "#" + client/server
+        - threadPoolName: rpc#server              # 名称规则：biz_thread_pool_name + "#" + client/server
           corePoolSize: 100
           maximumPoolSize: 200
           keepAliveTime: 60
