--- a/example/example-apollo/pom.xml
+++ b/example/example-apollo/pom.xml
@@ -29,6 +29,11 @@
             <version>${dtp.version}</version>
         </dependency>
         <dependency>
+            <groupId>cn.dynamictp</groupId>
+            <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
+            <version>${dtp.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.ctrip.framework.apollo</groupId>
             <artifactId>apollo-client</artifactId>
             <version>1.9.1</version>
