--- a/starter/starter-adapter/starter-adapter-rabbitmq/pom.xml
+++ b/starter/starter-adapter/starter-adapter-rabbitmq/pom.xml
@@ -19,6 +19,7 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-adapter-rabbitmq</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 </project>
