--- a/adapter/adapter-rabbitmq/pom.xml
+++ b/adapter/adapter-rabbitmq/pom.xml
@@ -18,6 +18,8 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+            <scope>compile</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
