--- a/example/example-adapter/example-adapter-rabbitmq/pom.xml
+++ b/example/example-adapter/example-adapter-rabbitmq/pom.xml
@@ -24,5 +24,9 @@
             <artifactId>dynamic-tp-spring-boot-starter-adapter-rabbitmq</artifactId>
             <version>${dtp.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+        </dependency>
     </dependencies>
 </project>
