--- a/starter/starter-configcenter/pom.xml
+++ b/starter/starter-configcenter/pom.xml
@@ -20,5 +20,6 @@
         <module>cloud-starter-consul</module>
         <module>starter-etcd</module>
         <module>cloud-starter-polaris</module>
+        <module>cloud-starter-huawei</module>
     </modules>
 </project>
