--- a/test/test-core/src/test/resources/dynamic-tp-nacos-demo-dtp-dev.yml
+++ b/test/test-core/src/test/resources/dynamic-tp-nacos-demo-dtp-dev.yml
@@ -86,3 +86,9 @@ spring:
             - type: queue_timeout
               enabled: true
               threshold: 1
+        - threadPoolName: dtpExecutor13               # 测试当核心数为0时，ScheduledThreadPoolExecutor占用CPU问题
+          executorType: scheduled                     # 线程池类型common、eager：适用于io密集型
+          corePoolSize: 0                             # 0时，ScheduledThreadPoolExecutor占用CPU问题
+          maximumPoolSize: 100
+          queueCapacity: 200
+          queueType: DelayQueue                       # 任务队列，查看源码QueueTypeEnum枚举类
