--- a/example/example-nacos-cloud/src/main/resources/bootstrap.yml
+++ b/example/example-nacos-cloud/src/main/resources/bootstrap.yml
@@ -9,15 +9,15 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: http://${nacos1}:8848,http://${nacos2}:8848,http://${nacos3}:8848
+        server-addr: localhost:8848
       config:
-        server-addr: http://${nacos1}:8848,http://${nacos2}:8848,http://${nacos3}:8848
-        file-extension: yaml
+        server-addr: ${spring.cloud.nacos.discovery.server-addr}
+        file-extension: yml
         extension-configs:
           - dataId: ${spring.application.name}-dtp-${spring.profiles.active}.${spring.cloud.nacos.config.file-extension}
             group: DEFAULT_GROUP
             refresh: true  # 必须配置，负责自动刷新不生效
         refresh-enabled: true
   redis:
-    host: redis
+    host: localhost
     port: 6379
