--- a/example/example-adapter/pom.xml
+++ b/example/example-adapter/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-example-adapter</artifactId>
     <packaging>pom</packaging>
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-extension-notify-email</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
