--- a/adapter/adapter-motan/pom.xml
+++ b/adapter/adapter-motan/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-adapter</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-adapter-motan</artifactId>
 
