--- a/example/example-adapter/example-adapter-brpc/pom.xml
+++ b/example/example-adapter/example-adapter-brpc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>dynamic-tp-example-adapter</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-example-adapter-brpc</artifactId>
 
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-brpc</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
