--- a/example/example-huawei-cloud/pom.xml
+++ b/example/example-huawei-cloud/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-example</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>dynamic-tp-example-huawei-cloud</artifactId>
@@ -66,13 +66,13 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-huawei</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 
