--- a/example/example-polaris-cloud/pom.xml
+++ b/example/example-polaris-cloud/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-example-polaris-cloud</artifactId>
 
@@ -50,13 +50,13 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-cloud-starter-polaris</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
 
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-adapter-webserver</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 </project>
