--- a/example/example-zookeeper/pom.xml
+++ b/example/example-zookeeper/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>dynamic-tp-example</artifactId>
         <groupId>cn.dynamictp</groupId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-example-zookeeper</artifactId>
 
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>cn.dynamictp</groupId>
             <artifactId>dynamic-tp-spring-boot-starter-zookeeper</artifactId>
-            <version>${dtp.version}</version>
+            <version>${revision}</version>
         </dependency>
     </dependencies>
 </project>
