--- a/extension/extension-limiter-redis/pom.xml
+++ b/extension/extension-limiter-redis/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-extension</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-extension-limiter-redis</artifactId>
 
