--- a/logging/pom.xml
+++ b/logging/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-all</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-logging</artifactId>
 
