--- a/starter/starter-adapter/starter-adapter-okhttp3/pom.xml
+++ b/starter/starter-adapter/starter-adapter-okhttp3/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-starter-adapter</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-spring-boot-starter-adapter-okhttp3</artifactId>
 
