--- a/starter/starter-configcenter/cloud-starter-polaris/pom.xml
+++ b/starter/starter-configcenter/cloud-starter-polaris/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-starter-configcenter</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-spring-cloud-starter-polaris</artifactId>
 
