--- a/starter/starter-configcenter/cloud-starter-zookeeper/pom.xml
+++ b/starter/starter-configcenter/cloud-starter-zookeeper/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>cn.dynamictp</groupId>
         <artifactId>dynamic-tp-starter-configcenter</artifactId>
-        <version>1.1.1</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>dynamic-tp-spring-cloud-starter-zookeeper</artifactId>
 
