--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <skywalking.version>8.11.0</skywalking.version>
         <nacos.version>2.0.4</nacos.version>
         <zookeeper.version>5.2.1</zookeeper.version>
-        <maven_flatten_version>1.3.0</maven_flatten_version>
+        <maven-flatten.version>1.3.0</maven-flatten.version>
     </properties>
 
     <modules>
@@ -476,7 +476,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>${maven_flatten_version}</version>
+                <version>${maven-flatten.version}</version>
                 <configuration>
                     <updatePomFile>true</updatePomFile>
                     <flattenMode>resolveCiFriendliesOnly</flattenMode>
